# eat

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  TODO  environment-min.yml  environment.yml  install  install.bat  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  datetime.patch  ogs.patch  release.yml
PDAF_CMake/: CMakeLists.txt
PDAF_CMake/src/: CMakeLists.txt  pdaf_configure.h.in
cmake/Modules/: FindMPI.cmake
cmake/Modules/cfguard/: CMakeLists.txt  mingw_cfguard_support.c
conda.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  readme.md
doc/: eat.md
eatpy/: CMakeLists.txt  __init__.py  _eat_filter_pdaf.pyx  ceat_filter_pdaf.F90  eat_filter_pdaf.F90  filter.py  output.py  pdaf.py  shared.py  transform.py
eatpy/gotm/: generate_ensemble.py  obs.py
eatpy/models/: __init__.py  gotm.py  gotm_generate_ensemble.py
eatpy/plugins/: __init__.py  check.py  output.py  report.py  select.py  transform.py
models/gotm/: CMakeLists.txt  README.md  eat_model_gotm.F90  eat_obs_gotm.F90  eat_obs_gotm.py  generate_gotm_ensemble.py  state_vector.F90
pdaf/: CMakeLists.txt  README.md
pdaf/v1.16/: CMakeLists.txt
pdaf/v1.16/src/: CMakeLists.txt  pdaf_configure.F90
pdaf/v2.1/: CMakeLists.txt
pdaf/v2.1/src/: CMakeLists.txt
src/: .eat_observations.F90.swp  .eat_server.F90.swp  .eat_worker.F90.swp  CMakeLists.txt  README.md  eat_config.F90  eat_filter_pdaf.F90  eat_gotm_model.F90  eat_model_gotm.F90  eat_model_seamless.F90  eat_obs.F90  eat_observations.F90  eat_observations.py  eat_pdaf.F90  eat_pdaf_filter.F90  eat_server.F90  eat_worker.F90  mpi_config.F90  pdaf_wrapper.F90
tests/: .gitignore  CMakeLists.txt
tests/2d/: .gitignore  CMakeLists.txt  README.md  eat_2d.nml  eat_2d_data.F90  eat_2d_model.F90  eat_2d_obs.F90  eat_model_2d.F90  eat_obs_2d.F90  eat_pdaf.nml  fields_2d.F90  obs_2d_times.dat.short  plot_fields.py
tests/nns_annual/: .KURT.swp  .plot.py.swp  README.md  eat_gotm.nml  eat_pdaf.nml  eat_pdaf_config.nml  gotm.yaml  gotm_0000.yaml  gotm_0002.yaml  gotm_0003.yaml  gotm_0004.yaml  gotm_0005.yaml  gotm_0006.yaml  gotm_0007.yaml  gotm_0008.yaml  gotm_0009.yaml  gotm_0010.yaml  gotm_0011.yaml  obs_times.dat.all  plot.ipynb  plot.py  run.py  xarray
tests/seamless/: CMakeLists.txt  eat_seamless.nml  eat_seamless_filter.F90  eat_seamless_model.F90  eat_seamless_obs.F90
